--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,12 +10,15 @@
     <link href="https://fonts.googleapis.com/css?family=News+Cycle:700|Playfair+Display+SC:900" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/assets/js/app.js"></script>"
 </head>
 
 <body>
     <div class="container">
         {{{ body }}}
     </div>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
