added nav bar with empty link buttons

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,18 @@
 
 <body>
     <div class="container">
+        <nav class="navbar navbar-light text-center" style="background-color: rgba(47, 43, 48, 0.01)">
+            <button class="btn btn-lg" id="scrapebtn">
+                Get new articles
+            </button>
+            <button class="btn btn-lg" id="homebtn">
+                Home
+            </button>
+            <button class="btn btn-lg" id="savedbtn">
+                Saved articles
+            </button>
+            <hr>
+        </nav>
         {{{ body }}}
     </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
