--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,4 @@
-<h1 class="text-center">
-    Articles: </h1>
+<h1 class="text-center">Articles: </h1>
 <div class="articleList">
     {{#each article}}
     <div class="row">
