added article button and home button functionality

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-light text-center" style="background-color: rgba(47, 43, 48, 0.01)">
-            <button class="btn btn-lg" id="scrapebtn">
+            <button class="btn btn-lg" id="scrapebtn" action="/scrape" method="get">
                 Get new articles
             </button>
             <button class="btn btn-lg" id="homebtn">
