--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,12 +29,12 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label for="comment">Comment:</label>
-                        <textarea class="form-control" rows="5" id="comment"></textarea>
+                        <label for="bodyinput">Comment:</label>
+                        <textarea class="form-control" rows="5" id="bodyinput"></textarea>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button id="submit" type="button" class="btn btn-default" data-dismiss="modal">Submit</button>
+                    <button id="submit" type="button" class="btn btn-default" data-dismiss="modal" data-id="{{this.id}}">Submit</button>
                 </div>
             </div>
 
